--- a/priv/www/bintree.html
+++ b/priv/www/bintree.html
@@ -8,7 +8,9 @@
 <link type="text/css" href="./jit/css/base.css" rel="stylesheet"/>
 <link type="text/css" href="./jit/css/Spacetree.css" rel="stylesheet"/>
 
-<!--[if IE]><script language="javascript" type="text/javascript" src="./jit/Extras/excanvas.js"></script><![endif]-->
+<!--[if IE]>
+<script language="javascript" type="text/javascript" src="./jit/Extras/excanvas.js"></script>
+<![endif]-->
 
 <!-- JIT Library File -->
 <script language="javascript" type="text/javascript" src="./jit/jit.js"></script>
@@ -21,9 +23,9 @@
 
 <div id="container">
 
-<div id="left-container">
+<div id="json-container">
 
-    <textarea id="tree-dom" rows="35" cols="50" style="width:99%;">
+    <textarea id="tree-dom" rows="15" cols="50" style="width:99%;">
 {id:"node02", name:"0.2", data:{}, children:[
     {id:"node13", name:"1.3", data:{}, children:[
         {id:"node24", name:"2.4", data:{}, children:[
@@ -221,50 +223,23 @@
     ]}
 ]}
     </textarea><br/>
-    <input type='button' onclick='init(document.getElementById("tree-dom").innerHTML);' value="Click me!"></input>
+    <input type='button' onclick='init(document.getElementById("tree-dom").value);' value="Reload"></input>
 </div>
 
-<div id="center-container">
+<div id="tree-container">
     <div id="infovis"></div>    
 </div>
 
-<div id="right-container">
-
-<h4>Change Tree Orientation</h4>
-<table>
-    <tr>
-        <td>
+<div id="banner-container">
+Change Tree Orientation -- 
             <label for="r-left">left </label>
-        </td>
-        <td>
             <input type="radio" id="r-left" name="orientation" checked="checked" value="left" />
-        </td>
-    </tr>
-    <tr>
-         <td>
             <label for="r-top">top </label>
-         </td>
-         <td>
             <input type="radio" id="r-top" name="orientation" value="top" />
-         </td>
-    <tr>
-         <td>
             <label for="r-bottom">bottom </label>
-          </td>
-          <td>
             <input type="radio" id="r-bottom" name="orientation" value="bottom" />
-          </td>
-    </tr>
-    <tr>
-          <td>
             <label for="r-right">right </label>
-          </td> 
-          <td> 
            <input type="radio" id="r-right" name="orientation" value="right" />
-          </td>
-    </tr>
-</table>
-
 </div>
 
 <div id="log"></div>
