--- a/priv/www/bintree.html
+++ b/priv/www/bintree.html
@@ -12,21 +12,35 @@
 <script language="javascript" type="text/javascript" src="./jit/Extras/excanvas.js"></script>
 <![endif]-->
 
-<!-- JIT Library File -->
 <script language="javascript" type="text/javascript" src="./jit/jit.js"></script>
-
-<!-- Example File -->
 <script language="javascript" type="text/javascript" src="bintree.js"></script>
 </head>
 
 <body>
 
-<div id="container">
+<div id="tree-container">
+    <div id="infovis"></div>    
+</div>
 
-<div id="json-container">
+<div id="banner-container">
+Change Tree Orientation -- 
+    <label for="r-left">left </label>
+    <input type="radio" id="r-left" name="orientation" checked="checked" value="left" />
+    <label for="r-top">top </label>
+    <input type="radio" id="r-top" name="orientation" value="top" />
+    <label for="r-bottom">bottom </label>
+    <input type="radio" id="r-bottom" name="orientation" value="bottom" />
+    <label for="r-right">right </label>
+    <input type="radio" id="r-right" name="orientation" value="right" />
+    <input type='button' onclick='loadsql();' value="Reload" />
+</div>
 
-    <textarea id="tree-dom" rows="15" cols="50" style="width:99%;">
-{id:"node02", name:"0.2", data:{}, children:[
+</div>
+</body>
+</html>
+
+<!--
+   {id:"node02", name:"0.2", data:{}, children:[
     {id:"node13", name:"1.3", data:{}, children:[
         {id:"node24", name:"2.4", data:{}, children:[
             {id:"node35", name:"3.5", data:{}, children:[
@@ -222,27 +236,5 @@
         ]}
     ]}
 ]}
-    </textarea><br/>
-    <input type='button' onclick='init(document.getElementById("tree-dom").value);' value="Reload"></input>
-</div>
+-->
 
-<div id="tree-container">
-    <div id="infovis"></div>    
-</div>
-
-<div id="banner-container">
-Change Tree Orientation -- 
-            <label for="r-left">left </label>
-            <input type="radio" id="r-left" name="orientation" checked="checked" value="left" />
-            <label for="r-top">top </label>
-            <input type="radio" id="r-top" name="orientation" value="top" />
-            <label for="r-bottom">bottom </label>
-            <input type="radio" id="r-bottom" name="orientation" value="bottom" />
-            <label for="r-right">right </label>
-           <input type="radio" id="r-right" name="orientation" value="right" />
-</div>
-
-<div id="log"></div>
-</div>
-</body>
-</html>
