Rendering and other fix
1. Fix for NOT
2. Tree renderes maximising browser space
3. Auto load from file

--- a/priv/www/bintree.html
+++ b/priv/www/bintree.html
@@ -23,16 +23,8 @@
 </div>
 
 <div id="banner-container">
-Change Tree Orientation -- 
-    <label for="r-left">left </label>
-    <input type="radio" id="r-left" name="orientation" checked="checked" value="left" />
-    <label for="r-top">top </label>
-    <input type="radio" id="r-top" name="orientation" value="top" />
-    <label for="r-bottom">bottom </label>
-    <input type="radio" id="r-bottom" name="orientation" value="bottom" />
-    <label for="r-right">right </label>
-    <input type="radio" id="r-right" name="orientation" value="right" />
     <input type='button' onclick='loadsql();' value="Reload" />
+    <pre id="sqltext" style="font-family:courier; font-size:14pt;"></pre>
 </div>
 
 </div>
