--- a/priv/www/boxer.html
+++ b/priv/www/boxer.html
@@ -6,26 +6,50 @@
             #container {
                 background-color: rgb(255,255,0);
                 position:absolute;
-                width:99%;
+                width:49.9%;
                 height:900px;
-                left:10px;
-                top:10px;
+                left:0px;
+                top:0px;
                 overflow:auto
+            }
+
+            #sql-div {
+                background-color: rgb(0,255,255);
+                position:absolute;
+                top:0px;
+                right:0px;
+                width:49.9%;
+                height:900px;
+                overflow:auto;
+            }
+
+            .edit_div {
+                height:20px;
+                width:900px;
             }
 
             .inner_div {
                 min-height:20px;
                 position:absolute;
-                width:500px;
+                width:900px;
                 height:20px;
-                border:1px solid;
                 overflow:hidden;
+                font-family:courier;
+                font-size:10pt;
+                vertical-align: top;
             }
-
         </style>
     </head>
 <body>
-    <div id="container"/>
+    <div id="container"></div>
+    <div id="banner-container" style="position:absolute; bottom:0px">
+        <input type='button' onclick='loadsqlfiles()' value="Reload List" />
+        <select id="qfiles" onChange='loadsql()'></select>
+        <input type='button' onclick='loadsql()' value="Load" />
+    </div>
+    <div id="sql-div">
+        <pre id="sqltext" style="font-family:courier; font-size:10pt;"></pre>
+    </div>
 </body>
 
 </html>
